k8s/deployment_a/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a-svc
  namespace: zeitview
spec:
  selector:
    app: app-a
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
